Added comment feature with real time notif using websocket.io
